fix(settings): prevent flicker when leaving settings page

--- a/packages/fxa-content-server/app/styles/modules/_settings.scss
+++ b/packages/fxa-content-server/app/styles/modules/_settings.scss
@@ -17,6 +17,11 @@ body.settings #main-content {
   box-shadow: none;
 }
 
+
+body.settings #main-content.panel {
+  visibility: hidden;
+}
+
 // settings header controls
 #fxa-settings-header-wrapper {
   background: #fff;
